# zipparu

./: .gitignore  README.md  pyproject.toml  setup.bat
zipparu/: __init__.py  main.py
